force-app/main/default/objects/Source_Quality_Snapshot__c/Source_Quality_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Per-source outcome rollup: leads, sign rate, cost-per-signed-case, avg case value, and a transparent quality score with its rationale.</description>
    <label>Source Quality Snapshot</label>
    <nameField>
        <displayFormat>SQS-{0000}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source Quality Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>