force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Avg_Case_Value__c.field-meta.xml
<CustomField>
    <fullName>Avg_Case_Value__c</fullName>
    <description>Average expected case value for this source&apos;s matter mix (from Case_Value__mdt).</description>
    <label>Avg Case Value</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>