force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Cost_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Lead__c</fullName>
    <description>Spend / leads (blank when no spend recorded).</description>
    <label>Cost Per Lead</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>