force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Cost_Per_Signed__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Signed__c</fullName>
    <description>Spend / signed (blank when no spend or no signings).</description>
    <label>Cost Per Signed</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>