force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Lead_Fit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fit_Rate__c</fullName>
    <description>Percent of leads that were viable (not lost on case merits, per #69).</description>
    <label>Lead Fit Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>