force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Leads__c.field-meta.xml
<CustomField>
    <fullName>Leads__c</fullName>
    <description>Intakes attributed to this source in the window.</description>
    <label>Leads</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>