force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Period_End__c.field-meta.xml
<CustomField>
    <fullName>Period_End__c</fullName>
    <description>End of the rollup window.</description>
    <label>Period End</label>
    <type>Date</type>
</CustomField>