force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Period_Start__c</fullName>
    <description>Start of the rollup window.</description>
    <label>Period Start</label>
    <type>Date</type>
</CustomField>