force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <description>Transparent score: expected value per lead, divided by cost-per-lead when spend is known. Higher is better. See rationale.</description>
    <label>Quality Score</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>