force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Score_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Score_Rationale__c</fullName>
    <description>The inputs behind the quality score, so it is never an opaque number.</description>
    <label>Score Rationale</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>