force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Sign_Rate__c.field-meta.xml
<CustomField>
    <fullName>Sign_Rate__c</fullName>
    <description>Signed / leads, as a percent.</description>
    <label>Sign Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>