force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Signed__c.field-meta.xml
<CustomField>
    <fullName>Signed__c</fullName>
    <description>Signed retainers from this source in the window.</description>
    <label>Signed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>