force-app/main/default/objects/Source_Quality_Snapshot__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The lead source this snapshot rolls up.</description>
    <label>Source</label>
    <length>120</length>
    <type>Text</type>
</CustomField>